--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "framework": "express",
   "routes": [
+    { "src": "/(.*\\.html)", "dest": "/$1" },
+    { "src": "/(.*\\.css)", "dest": "/$1" },
+    { "src": "/(.*\\.js)", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/server.js" }
   ]
 }
